--- a/public/admin.html
+++ b/public/admin.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Admin - Tambah & Kelola Produk</title>
+  <title>Admin - Tambah & Kelola Produk Untuk TopUpKu.xyz</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   <style>
     /* Reset & base */
@@ -603,4 +603,5 @@
     });
   </script>
 </body>
+
 </html>
